--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "~18.0.27",
     "expo": "^48.0.20",
     "expo-constants": "~14.2.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.3",
     "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.2",
+    "formik": "^2.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
@@ -23,8 +25,9 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "^0.18.12",
-    "@types/react": "~18.0.27",
-    "typescript": "^4.9.4"
+    "react-router-native": "^6.15.0",
+    "typescript": "^4.9.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
